--- a/superMarketInvoicingManage/src/main/webapp/login.html
+++ b/superMarketInvoicingManage/src/main/webapp/login.html
@@ -1,13 +1,43 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<%@ include file="../common/common.jsp"%>
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<title>登录页</title>
+
+		<!-- basic styles -->
+
+		<link href="static/css/bootstrap.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="static/css/font-awesome.min.css" />
+
+		<!--[if IE 7]>
+		  <link rel="stylesheet" href="static/css/font-awesome-ie7.min.css" />
+		<![endif]-->
+
+		<!-- page specific plugin styles -->
+
+		<!-- fonts -->
+
+		<link rel="stylesheet" href="http//fonts.googleapis.com/css?family=Open+Sans:400,300" />
+
+		<!-- ace styles -->
+
+		<link rel="stylesheet" href="static/css/ace.min.css" />
+		<link rel="stylesheet" href="static/css/ace-rtl.min.css" />
+
+		<!--[if lte IE 8]>
+		  <link rel="stylesheet" href="static/css/ace-ie.min.css" />
+		<![endif]-->
+
+		<!-- inline styles related to this page -->
+
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+
+		<!--[if lt IE 9]>
+		<script src="static/js/html5shiv.js"></script>
+		<script src="static/js/respond.min.js"></script>
+		<![endif]-->
 	</head>
+
 	<body class="login-layout">
 		<div class="main-container">
 			<div class="main-content">
@@ -17,9 +47,10 @@
 							<div class="center">
 								<h1>
 									<i class="icon-leaf green"></i>
-									<span class="red">超市</span>
-									<span class="white">进销存管理系统</span>
+									<span class="red">Ace</span>
+									<span class="white">Application</span>
 								</h1>
+								<h4 class="blue">&copy; Company Name</h4>
 							</div>
 
 							<div class="space-6"></div>
@@ -35,18 +66,18 @@
 
 											<div class="space-6"></div>
 
-											<form action="./invoicing/manager/login" method="post">
+											<form action="index.html">
 												<fieldset>
 													<label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input type="text" name="loginName" class="form-control" placeholder="Username" />
+															<input type="text" class="form-control" placeholder="Username" />
 															<i class="icon-user"></i>
 														</span>
 													</label>
 
 													<label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input type="password" name="password" class="form-control" placeholder="Password" />
+															<input type="password" class="form-control" placeholder="Password" />
 															<i class="icon-lock"></i>
 														</span>
 													</label>
@@ -69,11 +100,11 @@
 												</fieldset>
 											</form>
 
-											<!-- <div class="social-or-login center">
+											<div class="social-or-login center">
 												<span class="bigger-110">Or Login Using</span>
-											</div> -->
+											</div>
 
-											<!-- <div class="social-login center">
+											<div class="social-login center">
 												<a class="btn btn-primary">
 													<i class="icon-facebook"></i>
 												</a>
@@ -85,7 +116,7 @@
 												<a class="btn btn-danger">
 													<i class="icon-google-plus"></i>
 												</a>
-											</div> -->
+											</div>
 										</div><!-- /widget-main -->
 
 										<div class="toolbar clearfix">
@@ -227,10 +258,39 @@
 				</div><!-- /.row -->
 			</div>
 		</div><!-- /.main-container -->
+
+		<!-- basic scripts -->
+
+		<!--[if !IE]> -->
+
+		<script src="http//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+
+		<!-- <![endif]-->
+
+		<!--[if IE]>
+<script src="http//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<![endif]-->
+
+		<!--[if !IE]> -->
+
+		<script type="text/javascript">
+			window.jQuery || document.write("<script src='static/js/jquery-2.0.3.min.js'>"+"<"+"/script>");
+		</script>
+
+		<!-- <![endif]-->
+
+		<!--[if IE]>
+<script type="text/javascript">
+ window.jQuery || document.write("<script src='static/js/jquery-1.10.2.min.js'>"+"<"+"/script>");
+</script>
+<![endif]-->
+
 		<script type="text/javascript">
 			if("ontouchend" in document) document.write("<script src='static/js/jquery.mobile.custom.min.js'>"+"<"+"/script>");
 		</script>
+
 		<!-- inline scripts related to this page -->
+
 		<script type="text/javascript">
 			function show_box(id) {
 			 jQuery('.widget-box.visible').removeClass('visible');
